# obsidian-monorepo

./: .editorconfig  .envrc  .gitignore  .gitmodules  .lintstagedrc.mjs  .markdownlint-cli2.mjs  .prettierignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  pyproject.toml  requirements.txt  tsconfig.json  update-dependencies  update-dependencies.py  update-template.bat  update-template.py  vitest.config.mts
.agents/instructions/: agents.instructions.md  copilot.instructions.md
.changeset/: config.json
.github/: dependabot.yml
.github/instructions/: agents.instructions.md  copilot.instructions.md
.github/workflows/: ci.yml  latest.yml  release-rolling.yml
scripts/: __init__.py  update-dependencies.bat  update-dependencies.py  update-dependencies.sh  update-template  update-template.py  update-template.sh  update_dependencies  update_dependencies.bat  update_dependencies.py  update_dependencies.sh  update_template  update_template.bat  update_template.py  update_template.sh
tests/: test_docstrings.py  test_git_executable.py  test_module_exports.py  tsconfig.test.json
tests/scripts_/: __init__.py  test_update_dependencies.py  test_update_template.py
