[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "obsidian-monorepo-0a620499-365c-4586-b77a-7a226ce0ed3e"
version = "0.0.0"
requires-python = ">=3.12.0"
description = "Obsidian Monorepo"
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = [
  "aioshutil>=1.3.0",
  "anyio>=3.6.0",
]

[project.scripts]

[project.urls]
repository = "https://github.com/polyipseity/obsidian-monorepo.git"

[dependency-groups]
dev = [
  "hypothesis>=6.151.0",
  "pandas-stubs>=3.0.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
]

[tool.pyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  ".venv",
  # These contain their own pyright configurations, and are not intended to be type-checked as part of this project.
  "obsidian-terminal",
]
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."
pythonPlatform = "All"
pythonVersion = "3.12"
deprecateTypingAliases = true
enableReachabilityAnalysis = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

[[tool.pyright.executionEnvironments]]
extraPaths = ["."]
reportPrivateUsage = "none"
root = "tests"

[[tool.pyright.executionEnvironments]]
root = "."

[tool.pytest.ini_options]
addopts = ["--cov=./", "--cov-report=term-missing", "--dist=loadscope", "-n=auto", "--strict-markers"]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable Pylint-derived rule that disallows imports outside module top-level
# (import-outside-top-level / PLC0415). Ruff 0.12.0+ provides this rule.
extend-select = ["I", "PLC0415"]

[tool.uv]
required-version = ">=0.10.0,<0.11.0"

[tool.uv.build-backend]
# Do not include any packages in the build, as this project is only a collection of tools and scripts.
module-name = []
source-include = ["py.typed"]
