[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "obsidian-monorepo-0a620499-365c-4586-b77a-7a226ce0ed3e"
version = "0.0.0"
requires-python = ">=3.12.0"
description = "Obsidian Monorepo"
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = [
  "anyio>=4.12.0",
  "asyncer>=0.0.17",
  "uvloop>=0.22.0; platform_system != 'Windows'",
  "winloop>=0.5.0; platform_system == 'Windows'",
]

[project.scripts]

[project.urls]
repository = "https://github.com/polyipseity/obsidian-monorepo.git"

[dependency-groups]
dev = [
  "hypothesis>=6.151.0",
  "pandas-stubs>=3.0.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
  "ty>=0.0.31",
]

[tool.pytest.ini_options]
addopts = ["--cov=./", "--cov-report=term-missing", "--dist=loadscope", "-n=auto", "--strict-markers"]
testpaths = [
  ".agents/skills/**/tests_*",
  "tests",
]
python_files = "test_*.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable Pylint-derived rule that disallows imports outside module top-level
# (import-outside-top-level / PLC0415). Ruff 0.12.0+ provides this rule.
extend-select = ["I", "PLC0415"]

[tool.ty.environment]
python-platform = "all"

[tool.ty.rules]
all = "error"

[tool.ty.src]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  ".venv",
  # self
  # These contain their own ty configurations, and are not intended to be type-checked as part of this project.
  "obsidian-terminal",
]

[tool.uv]
required-version = ">=0.9.0,<0.11.0"

[tool.uv.build-backend]
# Do not include any packages in the build, as this project is only a collection of tools and scripts.
module-name = []
source-include = ["py.typed"]
